# octos-tui

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.cargo/: config.toml.example
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DESIGN_update_doctor.md  M9_31_CONTEXT_ATTACHMENTS_UPCR.md  M9_33_VISUAL_PARITY_HARNESS.md  ONBOARDING_TMUX_SOAK.md
docs/superpowers/plans/: 2026-06-29-no-repeat-onboarding.md  2026-06-30-query-history.md
docs/superpowers/specs/: 2026-06-26-moving-image-design.md  2026-06-29-no-repeat-onboarding-design.md  2026-06-30-query-history-design.md
locales/: en.yml  zh.yml
scripts/: run-onboarding-tmux-soak.sh
src/: app.rs  cli.rs  clipboard.rs  event_loop.rs  insert_history.rs  keymap.rs  lib.rs  main.rs  model.rs  store.rs  transport.rs  tui_terminal.rs  viewport.rs
src/cmd/: doctor.rs  github.rs  mod.rs  update.rs
src/menu/: availability.rs  providers.rs  registry.rs  render.rs  wizard.rs
